<resources>
    <string name="app_name">百度贴吧</string>
    <string name="debug_app_name">欢迎进入客户端debug模式</string>
    <string name="title_activity_main">DebugActivity</string>
    <string name="tiebaDebug">debug</string>
    <string name="switch_debug">亲，摇一摇开启调试模式吧！</string>
    <string name="switch_ok">已成功切换server地址到:</string>
    <string name="item_open">开</string>
    <string name="item_close">关</string>
    <string name="debug_opened">Debug页面已经打开了</string>
    <string name="dialog_ok">确 定</string>
    <string name="dialog_cancel">取 消</string>
    <string name="debug_close">已关闭Debug模式，重启客户端可再次开启！</string>
    <string name="prompt">提示</string>
    <string name="prompt_close_debug">是否关闭Debug模式？</string>
    <string name="prompt_switch">确认切换server地址？</string>
    <string name="adp_pull_to_refresh">下拉刷新</string>
    <string name="adp_refreshing">刷新中...</string>
    <string name="adp_pull_up_to_get_more">上拉或点击获取更多</string>
    <string name="adp_pull_view_date_tip">最后更新：</string>
    <string name="adp_release_to_get_more">可以松手了</string>
    <string name="adp_refreshed">上次更新时间</string>
    <string name="adp_release_to_refresh">释放刷新</string>
    <string name="adp_loading">正在加载</string>
    <string name="browser_app_name">TiebaBrowser</string>
    <string name="browser_load_empty_tip">请输入网址！</string>
    <string name="browser_widget_search_name">(4×1)百度搜索</string>
    <string name="browser_widget_ding_name">(4×2)百度Ding</string>
    <string name="browser_widget_ding_title">选择Ding样式</string>
    <string name="browser_trans_ding_name">黑色经典</string>
    <string name="browser_wood_ding_name">典雅木纹</string>
    <string name="browser_widget_clock_name">(4×2)百度时钟</string>
    <string name="browser_widget_clock_title">选择时钟样式</string>
    <string name="analog_clock_name">模拟时钟</string>
    <string name="browser_digital_clock_name">数字时钟</string>
    <string name="browser_digital_clock_calendar_original_text">2012.02.09</string>
    <string name="browser_widget_ding_text_main_orginal">本地天气</string>
    <string name="browser_widget_ding_text_description_orginal">点击查询</string>
    <string name="browser_app_title">"  百度一下,你就知道  "</string>
    <string name="browser_widget_title">" 百度一下"</string>
    <string name="browser_msg_activity_not_found">未找到应用程序</string>
    <string name="browser_str_browser_select">选择</string>
    <string name="browser_choose_upload">选择要上传的文件</string>
    <string name="browser_uploads_disabled">文件上传功能已停用。</string>
    <string name="browser_loadSuspendedTitle">没有网络连接</string>
    <string name="browser_loadSuspended">未连接到互联网，因此浏览器无法载入该网页。</string>
    <string name="browser_ssl_warnings_header">该网站的安全证书有问题。</string>
    <string name="browser_ssl_continue">继续</string>
    <string name="browser_security_warning">安全警告</string>
    <string name="browser_ssl_untrusted">该证书并非来自可信的授权中心。</string>
    <string name="browser_ssl_mismatch">网站的名称与证书上的名称不一致。</string>
    <string name="browser_ssl_expired">该证书已过期。</string>
    <string name="browser_ssl_not_yet_valid">该证书尚未生效。</string>
    <string name="browser_FrameFormResubmitLabel">确认</string>
    <string name="browser_FrameFormResubmitMessage">你尝试查看的网页中包含已经提交的数据（“POSTDATA”）。如果你重新发送这些数据，系统会重复该网页上的表单所执行过的一切操作（如搜索或在线购买）。</string>
    <string name="browser_about_head_about">关于</string>
    <string name="browser_about_logo_text1">百度搜索</string>
    <string name="browser_about_logo_text2">版本号：</string>
    <string name="browser_about_product_zhangbai_text">掌上百度</string>
    <string name="browser_about_product_appsearch_text">应用搜索</string>
    <string name="browser_about_product_browser_text">百度浏览器</string>
    <string name="browser_about_product_inputmethod_text">百度输入法</string>
    <string name="browser_about_check_update">检查更新</string>
    <string name="browser_about_checking">检查中…</string>
    <string name="browser_about_product_title">更多百度产品</string>
    <string name="browser_about_search_title">关于百度搜索</string>
    <string name="browser_about_search_content_summary">百度搜索是百度推出的一款方便手机用户随时随地使用百度搜索服务的应用。</string>
    <string name="browser_about_search_content_summary2">依托网页、新闻、图片、地图、知道、百科、MP3、视频等专业垂直搜索频道，帮助手机用户更快找到所需，打造快捷手机新搜索。</string>
    <string name="browser_update_toast_already_latest">你的版本已经是最新的了</string>
    <string name="browser_update_toast_bad_net">网络故障,请稍后再试</string>
    <string name="browser_update_checkbox_text">忽略此版本的更新</string>
    <string name="browser_auto_update_dialog_button_update">更新</string>
    <string name="browser_auto_update_dialog_button_later">稍后</string>
    <string name="browser_auto_update_dialog_button_close">关闭</string>
    <string name="browser_positive_update_dialog_button_ok">好</string>
    <string name="browser_positive_update_dialog_button_later">稍后</string>
    <string name="browser_dialog_positive_button_text">确定</string>
    <string name="browser_dialog_nagtive_button_text">取消</string>
    <string name="browser_find_high_package_dialog_title">发现升级包</string>
    <string name="browser_update_finish_title">下载完毕</string>
    <string name="browser_update_unfinish_title">正在下载中…</string>
    <string name="browser_update_finish_message">安装包已经下载完毕,是否立即升级?</string>
    <string name="browser_update_failed_message">解析错误，安装失败。</string>
    <string name="browser_about_search_content_seg1">"最便捷的搜索：  "</string>
    <string name="browser_about_search_content_seg2">● 自动收录搜索历史，即时提供搜索建议，大大简化搜索输入，让搜索信息更快捷；</string>
    <string name="browser_about_search_content_seg21">● 最懂中文的语音搜索，让你无需动手即可方便完成搜索；</string>
    <string name="browser_about_search_content_seg22">● 最直观、最友好、最懂中国用户的搜索结果，让搜索更高效；</string>
    <string name="browser_about_search_content_seg23">● 支持将搜索结果中的百度数据开放平台信息添加到应用首页的Ding，日常信息即时跟踪；</string>
    <string name="browser_about_search_content_seg24">● 本地搜索支持对联系人、短信、音乐、应用程序以及提供内容搜索的第三方应用程序进行搜索，让搜索更多元化；</string>
    <string name="browser_about_search_content_seg25">● 集成百度贴吧、百度新闻、百度风云榜、百度小说、hao123等手机端常用服务，热门站点资讯，一键即达；</string>
    <string name="browser_about_search_content_seg26">● 桌面添加百度搜索、时钟和Ding的小部件，让你开机即可搜索、搜索、打开闹钟和浏览常用搜索（Ding）数据。</string>
    <string name="browser_about_search_content_seg3">最贴心的搜索：</string>
    <string name="browser_about_search_content_seg4">● 支持将搜索结果页中的百度数据开放平台信息添加到应用首页的Ding，免去日常重复搜索的过程，方便手机用户浏览及搜索日常信息。目前可以即时浏览的Ding包括全球主要城市的天气、沪深股票、港股、美股中国概念股、畅销小说等；</string>
    <string name="browser_about_search_content_seg41">● 支持用户设置个性化壁纸，设置自己喜欢的照片和图片为软件桌面壁纸，彰显你的个性；</string>
    <string name="browser_about_search_content_seg42">● 支持将百度搜索和百度数据开放平台信息添加到系统桌面小部件，更加快捷搜索和方便用户浏览常用搜索。</string>
    <string name="browser_about_search_content_tail">百度搜索©2012 Baidu</string>
    <string name="browser_uuid">"用户唯一识别码:
"</string>
    <string name="browser_builderVersion">构建版本号：</string>
    <string name="browser_contextmenu_openlink">打开</string>
    <string name="browser_contextmenu_savelink">保存链接</string>
    <string name="browser_contextmenu_copy">复制</string>
    <string name="browser_contextmenu_copylink">复制链接网址</string>
    <string name="browser_contextmenu_download_image">保存图片</string>
    <string name="browser_contextmenu_view_image">查看图片</string>
    <string name="browser_contextmenu_dial_dot">拨打…</string>
    <string name="browser_contextmenu_add_contact">添加联系人</string>
    <string name="browser_contextmenu_send_mail">发送电子邮件</string>
    <string name="browser_contextmenu_map">地图</string>
    <string name="browser_search_clear_history">清空历史记录</string>
    <string name="browser_search_clear_history_tips">是否清空历史记录?</string>
    <string name="browser_search_nohistory_tips">没有搜索历史记录</string>
    <string name="browser_search_nohistory_privatemode_tips">隐私模式不显示历史记录</string>
    <string name="browser_search_close_private_mode">关闭隐私模式</string>
    <string name="browser_search_visit_direct">访问：</string>
    <string name="browser_search_go">搜索</string>
    <string name="browser_search_cancel">取消</string>
    <string name="browser_download_title">下载历史记录</string>
    <string name="browser_download_no_sdcard_dlg_title">无 SD 卡</string>
    <string name="browser_download_no_sdcard_dlg_msg">需要有 SD 卡才能下载%s。</string>
    <string name="browser_download_sdcard_busy_dlg_title">SD 卡不可用</string>
    <string name="browser_download_sdcard_busy_dlg_msg">SD 卡正忙。要允许下载，请在通知中选择“关闭 USB 存储”。</string>
    <string name="browser_download_no_application_title">无法打开文件</string>
    <string name="browser_no_downloads">下载历史记录为空。</string>
    <string name="browser_download_error">下载不成功。</string>
    <string name="browser_download_success">下载完成。</string>
    <string name="browser_download_begin">开始下载</string>
    <string name="browser_download_running">正在下载…</string>
    <string name="browser_download_pending">正在开始下载…</string>
    <string name="browser_cancel">取消</string>
    <string name="browser_ok">确定</string>
    <string name="browser_button_queue_for_wifi">排队</string>
    <string name="browser_wifi_required_title">文件太大，不适于通过移动网络下载</string>
    <string name="browser_wifi_required_body">你不能从该移动网络下载一个大小为%1$s的文件。下次连接到 Wi-Fi 网络时，可触摸%1$s下载此文件。</string>
    <string name="browser_wifi_recommended_title">加入 Wi-Fi 下载队列？</string>
    <string name="browser_wifi_recommended_body">从该移动网络下载这个大小为 %1$s的文件可能会耗尽电池电量，还要向运营商支付额外的费用。下次连接到 Wi-Fi 网络时，可触摸%2$s下载此文件。</string>
    <string name="browser_button_cancel_download">取消</string>
    <string name="browser_button_start_now">立即开始</string>
    <string name="browser_deselect_all">清除所选项</string>
    <string name="browser_download_unknown_title">&lt;未命名></string>
    <string name="browser_notification_need_wifi_for_size">此大小的文件需要通过 Wi-Fi 下载</string>
    <string name="browser_notification_filename_separator">", "</string>
    <string name="person_info_text">个人资料</string>
    <string name="feedback">意见反馈</string>
    <string name="mention_replyme">回复</string>
    <string name="mention_atme">\@我</string>
    <string name="metion_chatmessage">聊天通知</string>
    <string name="metion_groupmessage">群消息通知</string>
    <string name="account_manager">帐号管理</string>
    <string name="msg_remind">消息提醒</string>
    <string name="sign_remind_outline">签到提醒</string>
    <string name="sign_remind_time_text">提醒时间</string>
    <string name="no_disturb_mode">免打扰</string>
    <string name="no_disturb_start_time">开始时间</string>
    <string name="no_disturb_end_time">结束时间</string>
    <string name="no_disturb_mode_time">免打扰时间设置</string>
    <string name="message_remind">消息通知</string>
    <string name="browsing_settings">浏览设置</string>
    <string name="upload_image_quality">上传图片质量</string>
    <string name="font_size">正文字号</string>
    <string name="new_fans">新粉丝</string>
    <string name="remind_tone">声音提示</string>
    <string name="remind_vibrate">振动提示</string>
    <string name="show_photo">正文头像</string>
    <string name="promoted_message_text">精彩内容推送</string>
    <string name="eyeshield_mode">夜间模式</string>
    <string name="version_info">版本信息</string>
    <string name="recommend_apps">精品应用推荐</string>
    <string name="browser_image_thrift">省流量模式</string>
    <string name="browser_image_thrift_tip">节省70%流量</string>
    <string name="group_create_group1">普通群</string>
    <string name="group_create_group2">官方群</string>
    <string name="group_create_group1_tip">每个用户可创建b个普通群，成员上限30人</string>
    <string name="group_create_group2_tip">每个吧可创建c个官方群，成员上限500人</string>
    <string name="group_msg_notify">群消息提醒</string>
    <string name="group_add_group_switch">允许申请加群</string>
    <string name="group_my_name">我的群昵称</string>
    <string name="group_dismiss">解散群组</string>
    <string name="group_quit">退出群组</string>
    <string name="group_report_txt">举报该群组</string>
    <string name="systemhelpsetting">辅助功能</string>
    <string name="share_to_label">分享到</string>
    <string name="share_weixin_timeline">微信朋友圈</string>
    <string name="share_weixin">微信</string>
    <string name="share_qzone">QQ空间</string>
    <string name="share_qweibo">腾讯微博</string>
    <string name="share_sina_weibo">新浪微博</string>
    <string name="share_renren">人人网</string>
    <string name="share_cancel">取消</string>
    <string name="image_show_setting">图片显示</string>
</resources>