<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textColor="@color/share_to" android:gravity="center_vertical" android:id="@id/share_dialog_title" android:background="@drawable/bg_unite_popup_share_up" android:paddingLeft="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/share_to_label" />
    <LinearLayout android:orientation="vertical" android:id="@id/share_dialog_content" android:background="@drawable/bg_unite_popup_share_down" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dip" android:paddingTop="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="12.0sp" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconWeixinTimeline" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_weixin_timeline" android:drawableTop="@drawable/icon_unite_share_friend" android:layout_weight="0.333" />
            <TextView android:textSize="12.0sp" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconWeixin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_weixin" android:drawableTop="@drawable/icon_unite_share_weixin" android:layout_weight="0.333" />
            <TextView android:textSize="12.0sp" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconQZone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_qzone" android:drawableTop="@drawable/icon_unite_share_qqzon" android:layout_weight="0.333" />
        </LinearLayout>
        <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip">
            <TextView android:textSize="12.0sp" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconQQWeibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_qweibo" android:drawableTop="@drawable/icon_unite_share_tencent" android:layout_weight="0.333" />
            <TextView android:textSize="12.0sp" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconSinaWeibo" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_sina_weibo" android:drawableTop="@drawable/icon_unite_share_sina" android:layout_weight="0.333" />
            <TextView android:textSize="12.0sp" android:textColor="@color/share_to" android:gravity="center_horizontal" android:id="@id/iconRenren" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/share_renren" android:drawableTop="@drawable/icon_unite_share_renren" android:layout_weight="0.333" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/customViewBox" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" />
        <Button android:textSize="17.0sp" android:textColor="@color/share_to" android:id="@id/btnShareCancel" android:background="@drawable/btn_w_square" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="20.0dip" android:text="@string/share_cancel" />
    </LinearLayout>
</LinearLayout>
