<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/parent" android:background="@color/backgroundcolor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.baidu.tieba.view.NavigationBar android:id="@id/view_navigation_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/view_navigation_bar">
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.baidu.tieba.view.MeasureLinearLayout android:orientation="vertical" android:id="@id/front_container" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/no_disturb_mode_container" android:layout_marginTop="10.0dip" style="@style/setting_bg_layout">
                    <TextView android:id="@id/no_disturb_mode_text" android:text="@string/no_disturb_mode" style="@style/setting_bg_text" />
                    <com.baidu.adp.widget.BdSwitchView.BdSwitchView android:layout_gravity="center_vertical" android:id="@id/no_disturb_mode_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" />
                </LinearLayout>
                <LinearLayout android:id="@id/no_disturb_mode_time_container" style="@style/setting_bg_layout">
                    <TextView android:id="@id/no_disturb_mode_time_text" android:text="@string/no_disturb_mode_time" style="@style/setting_bg_text" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff7f7f7f" android:id="@id/no_disturb_mode_time_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" />
                    <ImageView android:id="@id/no_disturb_mode_time_arrow" style="@style/setting_bg_arrow" />
                </LinearLayout>
                <LinearLayout android:id="@id/remind_tone" android:layout_marginTop="10.0dip" style="@style/setting_bg_layout">
                    <TextView android:id="@id/tone_text" android:text="@string/remind_tone" style="@style/setting_bg_text" />
                    <com.baidu.adp.widget.BdSwitchView.BdSwitchView android:layout_gravity="center_vertical" android:id="@id/remind_tone_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" />
                </LinearLayout>
                <LinearLayout android:id="@id/remind_vibrate" style="@style/setting_bg_layout">
                    <TextView android:id="@id/vibrate_text" android:text="@string/remind_vibrate" style="@style/setting_bg_text" />
                    <com.baidu.adp.widget.BdSwitchView.BdSwitchView android:layout_gravity="center_vertical" android:id="@id/remind_vibrate_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" />
                </LinearLayout>
                <LinearLayout android:id="@id/message_remind_container" android:layout_marginTop="10.0dip" style="@style/setting_bg_layout">
                    <TextView android:id="@id/message_remind_text" android:text="@string/message_remind" style="@style/setting_bg_text" />
                    <com.baidu.adp.widget.BdSwitchView.BdSwitchView android:layout_gravity="center_vertical" android:id="@id/message_remind_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/message_remind_value" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <CheckBox android:textSize="14.0sp" android:textColor="@color/more_color" android:id="@id/check_replyme" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="15.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:button="@null" android:text="@string/mention_replyme" android:drawableRight="@drawable/common_check_btn_bg" />
                    <CheckBox android:textSize="14.0sp" android:textColor="@color/more_color" android:id="@id/check_atme" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="15.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:button="@null" android:text="@string/mention_atme" android:drawableRight="@drawable/common_check_btn_bg" />
                    <CheckBox android:textSize="14.0sp" android:textColor="@color/more_color" android:id="@id/check_newfans" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="15.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:button="@null" android:text="@string/new_fans" android:drawableRight="@drawable/common_check_btn_bg" />
                    <CheckBox android:textSize="14.0sp" android:textColor="@color/more_color" android:id="@id/check_chatmessage" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="15.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:button="@null" android:text="@string/metion_chatmessage" android:drawableRight="@drawable/common_check_btn_bg" />
                    <CheckBox android:textSize="14.0sp" android:textColor="@color/more_color" android:id="@id/check_groupmessage" android:paddingLeft="10.0dip" android:paddingTop="6.0dip" android:paddingRight="15.0dip" android:paddingBottom="6.0dip" android:layout_width="fill_parent" android:layout_height="45.0dip" android:button="@null" android:text="@string/metion_groupmessage" android:drawableRight="@drawable/common_check_btn_bg" />
                </LinearLayout>
                <LinearLayout android:id="@id/sign_remind_on" android:layout_marginTop="10.0dip" style="@style/setting_bg_layout">
                    <TextView android:id="@id/sign_remind_on_text" android:text="@string/sign_remind_outline" style="@style/setting_bg_text" />
                    <com.baidu.adp.widget.BdSwitchView.BdSwitchView android:layout_gravity="center_vertical" android:id="@id/sign_remind_on_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" />
                </LinearLayout>
                <LinearLayout android:id="@id/sign_remind" style="@style/setting_bg_layout">
                    <TextView android:id="@id/sign_remind_text" android:text="@string/sign_remind_time_text" style="@style/setting_bg_text" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff7f7f7f" android:id="@id/sign_remind_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" />
                    <ImageView android:id="@id/sign_remind_arrow" style="@style/setting_bg_arrow" />
                </LinearLayout>
                <LinearLayout android:id="@id/promoted_message" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" style="@style/setting_bg_layout">
                    <TextView android:id="@id/promoted_message_text" android:text="@string/promoted_message_text" style="@style/setting_bg_text" />
                    <com.baidu.adp.widget.BdSwitchView.BdSwitchView android:layout_gravity="center_vertical" android:id="@id/promoted_message_switch" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" />
                </LinearLayout>
            </com.baidu.tieba.view.MeasureLinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/back_container" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/no_disturb_start_time" android:layout_marginTop="10.0dip" style="@style/setting_bg_layout">
                    <TextView android:id="@id/no_disturb_start_time_text" android:text="@string/no_disturb_start_time" style="@style/setting_bg_text" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff7f7f7f" android:id="@id/no_disturb_start_time_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" />
                    <ImageView android:id="@id/no_disturb_start_time_arrow" style="@style/setting_bg_arrow" />
                </LinearLayout>
                <LinearLayout android:id="@id/no_disturb_end_time" style="@style/setting_bg_layout">
                    <TextView android:id="@id/no_disturb_end_time_text" android:text="@string/no_disturb_end_time" style="@style/setting_bg_text" />
                    <TextView android:textSize="12.0sp" android:textColor="#ff7f7f7f" android:id="@id/no_disturb_end_time_value" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:singleLine="true" />
                    <ImageView android:id="@id/no_disturb_end_time_arrow" style="@style/setting_bg_arrow" />
                </LinearLayout>
            </LinearLayout>
        </FrameLayout>
    </ScrollView>
</RelativeLayout>
