<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/parent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tb="http://schemas.android.com/apk/res/com.baidu.tieba">
    <com.baidu.tieba.view.NavigationBar android:id="@id/view_navigation_bar" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <Button android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/create_group1" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="60.0dip" android:layout_marginRight="40.0dip" android:text="@string/group_create_group1" tb:tb_background="@drawable/btn_blue_square" tb:tb_textColor="@color/home_btngo_txt" />
    <TextView android:gravity="center" android:id="@id/create_group1_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_create_group1_tip" tb:tb_textColor="@color/group_create_color_text" />
    <Button android:textSize="18.0dip" android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/create_group2" android:layout_width="fill_parent" android:layout_height="46.0dip" android:layout_marginLeft="40.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="40.0dip" android:text="@string/group_create_group2" tb:tb_background="@drawable/btn_blue_square" tb:tb_textColor="@color/home_btngo_txt" />
    <TextView android:gravity="center" android:id="@id/create_group2_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/group_create_group2_tip" tb:tb_textColor="@color/group_create_color_text" />
</LinearLayout>
